--- a/README
+++ b/README
@@ -5,4 +5,4 @@ The only reason this project exists is to give
 the fine viewers a means to learning the Git
 commands
 
-All rights reserved.
+All rights reserved. May 2012.
