--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Git Essentials
+# Git Essentials (a Tuts+ Premium course)
 
 You are reading the README file for this fake project.
 The only reason this project exists is to give
